--- a/src/styles.css
+++ b/src/styles.css
@@ -13,10 +13,10 @@
 #regular-website{ 
   display: none;
   opacity:0%;
-  animation: fade 3s forwards;
+  animation: fade-in 3s forwards;
 }
 
-@keyframes fade {
+@keyframes fade-in {
     from { opacity:0%;}
     to { opacity:100%;}}
 
@@ -78,8 +78,6 @@ a {
 
 body {
   height: 100%;
-  background-repeat: no-repeat;
-  background-image: linear-gradient(#8b9da9, #fff6e4);
   box-shadow: inset 0 0 0px hsla(0,0%,0%,.3);
   margin-top: 0px;
   margin-left: 0px;
@@ -371,6 +369,19 @@ body{
 }
 
 .video-container{
-  background-image:url("https://www.kimiaviation.com/thumbs/1800x1170/gfx/Kimi_seamless_video_first_frame.jpg");
   background-size:100%;
+  height:100%
 }
+
+#starting-screen{
+  position:relative;
+  bottom: 140px;
+}
+
+@keyframes fade-out {
+    from { opacity:100%;}
+    to { opacity:0%;}}
+
+    body:not(.loaded) #slider img {
+      display:none;
+    }
