--- a/src/styles.css
+++ b/src/styles.css
@@ -2,6 +2,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Merriweather+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap');
 
+.no_highlights{
+  -webkit-tap-highlight-color: transparent;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+} 
+
 * {
   margin-bottom: 0;
 }
@@ -394,7 +404,7 @@ body{
 }
 
 .github{
-  zoom:70%;;
+  zoom:80%;;
   opacity: 30%;
 }
 
